fix css err: wrap-pad etc

--- a/src/components/burger/burger.scss
+++ b/src/components/burger/burger.scss
@@ -13,7 +13,7 @@
   height: 20px;
   width: 20px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-width-only) {
     display: none;
   }
 }
