--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -199,3 +199,8 @@
     margin-top: 55px;
   }
 }
+
+.footer__left .menu--column {
+  display: flex;
+  flex-direction: column;
+}
