--- a/src/components/main-nav/main-nav.scss
+++ b/src/components/main-nav/main-nav.scss
@@ -13,7 +13,7 @@
     border-bottom: 2px rgba($color-service--lighten, 0.4) solid;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-width-only) {
     min-height: 69px;
   }
 
@@ -74,6 +74,11 @@
   @media (max-width: $mobile-width-only) {
     display: none;
   }
+}
+
+.menu--closed {
+  display: flex;
+  flex-direction: row;
 }
 
 .burger__button--mobile {
