--- a/src/styles/const-width.scss
+++ b/src/styles/const-width.scss
@@ -1,4 +1,4 @@
-$mobile-width-only: 767px;
-$tablet-width-only: 1023px;
-$tablet-width: 768px;
-$desktop-width: 1024px;
+$mobile-width-only: 767.9px;
+$tablet-width-only: 1023.9px;
+$tablet-width: 768.2px;
+$desktop-width: 1024.2px;
