--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -50,7 +50,7 @@ img {
   min-width: 320px;
   margin: 0 auto;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-width-only) {
     min-width: $tablet-width;
     padding: 0 45px;
   }
